--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "googleapis": "^105.0.0",
+    "jwt-decode": "^4.0.0",
     "keen-slider": "^6.8.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
